--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     max-width: 70rem;
 }
 
+.section1{
+    border : 1px solid red;
+}
+
 section{
     display : flex;
     width: 100%;
@@ -121,4 +125,14 @@ section{
     font-family: 'Nanum Gothic Coding', monospace;
     text-decoration: none;
     font-size: 15px;
+}
+
+
+
+
+.firstPageClick {
+    width: 20rem;
+    margin-left: 50rem;
+    border : 4px solid blue;
+    display: inline;
 }
