--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ section{
     /* background-color: rgb(226, 184, 130); */
 }
 
+
 /* .left .right{
     flex-basis : 150px;
     flex-shrink: 0;
@@ -51,13 +52,51 @@ section{
 }
 
 
-.right {
+.section1 .right{
     /* background-color: brown; */
     width: 80%;
 }
 
 
 .right:after{
+    background-image: url(/Users/jiwoongkim/Documents/Paged/photos/backgroundImage/cafe2.jpg);
+    background-size: cover;    
+    z-index: -1;
+    background-repeat: repeat;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 200%;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    right:0;
+    bottom:0;
+}
+
+
+.section1 .bookPhotos{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-evenly;
+    margin-left: 50px;
+    width: 55rem;
+    height: 35rem;
+}
+
+.bookPhotos .book1,.book2,.book3 {
+    background-color:rgba(255, 255, 255, 0.4);
+    height: 28rem;
+    width: 22rem;
+    margin-top: 2rem;
+}
+
+
+/* section2 */
+
+.section2:after{
     background-image: url(/Users/jiwoongkim/Documents/Paged/photos/backgroundImage/cafe2.jpg);
     background-size: cover;    
     z-index: -1;
@@ -74,30 +113,23 @@ section{
     bottom:0;
 }
 
-
-.bookPhotos{
-    /* border: 2px solid blue; */
+.section2 .bookPhotos{
     display: flex;
     flex-direction: row;
     text-align: center;
     justify-content: space-evenly;
-    margin-left: 50px;
-    width: 55rem;
+    width: 73rem;
     height: 35rem;
+    margin-left: 2rem;
 }
 
-/* .bookPhotos > div{   
-    margin-top: 2rem;
-    height: 30rem;
-    width: 20rem;
-} */
-
-.bookPhotos .book1,.book2,.book3 {
+.bookPhotos .book4,.book5,.book6,.book7 {
     background-color:rgba(255, 255, 255, 0.4);
     height: 28rem;
     width: 22rem;
-    margin-top: 2rem;
+    margin-top: 4rem;
 }
+
 
 .bookPhotos div img {
     margin-top: 3rem;    
@@ -131,8 +163,15 @@ section{
 
 
 .firstPageClick {
-    width: 20rem;
+    width: 6rem;
     margin-left: 50rem;
     border : 4px solid blue;
-    display: inline;
+    display: block;
+}
+
+.secondPageClick {
+    width: 6rem;
+    margin-left: 68rem;
+    border : 4px solid blue;
+    display: block;
 }
