--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ section{
     display : flex;
     width: 100%;
     height: 100vh;
-    /* background-color: rgb(226, 184, 130); */
 }
 
 /* .left .right{
@@ -25,11 +24,10 @@ section{
     margin-left: 1rem;
     margin-top: 2rem;
     width: 20%;
-    background-color:rgba(185, 120, 45, 0.89);
+    background-color:rgba(184, 109, 24, 0.85);
     height: 85vh;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    /* background-color: antiquewhite; */
 }
 
 .avatar  {
@@ -39,7 +37,6 @@ section{
     padding : 0.3rem;
     background-color: rgb(  255 , 255  , 255  , 0.2); 
     margin-top :1rem;
-    /* margin-bottom: 1rem; */
  }
 
 .left .avatar img {
@@ -51,7 +48,6 @@ section{
 }
 
 .section1 .right{
-    /* background-color: brown; */
     width: 80%;
 }
 
@@ -89,9 +85,7 @@ section{
     margin-top: 2rem;
 }
 
-
 /* section2 */
-
 .section2:after{
     background-image: url(/Users/jiwoongkim/Documents/Paged/photos/backgroundImage/cafe2.jpg);
     background-size: cover;    
@@ -153,16 +147,32 @@ section{
     font-size: 15px;
 }
 
-.firstPageClick {
-    width: 6rem;
-    margin-left: 50rem;
-    border : 4px solid blue;
-    display: block;
+
+.firstPage {
+    display : inline-block;
+    border-radius: 100%;
 }
 
-.secondPageClick {
+.secondPage {
+    border-radius: 100%;
+}
+
+ .firstPage .icon-down-circled{
+    width: 6rem;
+    margin-left: 50rem;
+    font-size: 60px;
+    color:rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+}
+
+.secondPage .icon-down-circled{
     width: 6rem;
     margin-left: 68rem;
-    border : 4px solid blue;
-    display: block;
+    font-size: 60px;
+    color:rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+}
+
+.icon {
+    display: none;
 }
