Add : Added fontello files and modified arrow pictogram

--- a/fontello-43f9b9ae/css/fontello-codes.css
+++ b/fontello-43f9b9ae/css/fontello-codes.css
@@ -2,5 +2,5 @@
 .icon-mail:before { content: '\e800'; } /* '' */
 .icon-twitter:before { content: '\e801'; } /* '' */
 .icon-facebook:before { content: '\e802'; } /* '' */
+.icon-down-big:before { content: '\e803'; } /* '' */
 .icon-instagram-circled:before { content: '\f05e'; } /* '' */
-.icon-down-circled:before { content: '\f0ab'; } /* '' */
