--- a/fontello-43f9b9ae/css/fontello.css
+++ b/fontello-43f9b9ae/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?53661325');
-  src: url('../font/fontello.eot?53661325#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?53661325') format('woff2'),
-       url('../font/fontello.woff?53661325') format('woff'),
-       url('../font/fontello.ttf?53661325') format('truetype'),
-       url('../font/fontello.svg?53661325#fontello') format('svg');
+  src: url('../font/fontello.eot?99928454');
+  src: url('../font/fontello.eot?99928454#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?99928454') format('woff2'),
+       url('../font/fontello.woff?99928454') format('woff'),
+       url('../font/fontello.ttf?99928454') format('truetype'),
+       url('../font/fontello.svg?99928454#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?53661325#fontello') format('svg');
+    src: url('../font/fontello.svg?99928454#fontello') format('svg');
   }
 }
 */
@@ -58,5 +58,5 @@
 .icon-mail:before { content: '\e800'; } /* '' */
 .icon-twitter:before { content: '\e801'; } /* '' */
 .icon-facebook:before { content: '\e802'; } /* '' */
+.icon-down-big:before { content: '\e803'; } /* '' */
 .icon-instagram-circled:before { content: '\f05e'; } /* '' */
-.icon-down-circled:before { content: '\f0ab'; } /* '' */
